--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-.idea/workspace.xml
 .DS_Store
-node_modules
+
+*.iws
+.idea/workspace.xml
+.idea/tasks.xml
+
+/node_modules
+
+/dist
+/generated
+
+.sass-cache
+libpeerconnection.log
